--- a/frontend/my-app/public/index.html
+++ b/frontend/my-app/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script
+      type="text/javascript"
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-MML-AM_CHTML"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +44,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/x-mathjax-config;executed=true">
+      MathJax.Hub.Config({
+          tex2jax: { inlineMath: [['\\(', '\\)']], displayMath: [['$$', '$$']] }
+      });
+  </script>
   </body>
 </html>
